syntax = "proto3";

package xatu.libp2p.gossipsub.eth;

option go_package = "github.com/ethpandaops/xatu/pkg/proto/libp2p/gossipsub";

import "google/protobuf/wrappers.proto";

message BeaconBlock {
    google.protobuf.StringValue block = 1 [json_name = "block"];
    google.protobuf.UInt64Value slot = 2 [json_name = "slot"];
    google.protobuf.UInt64Value proposer_index = 3 [json_name = "proposer_index"];
}

message BlobSidecar {
    google.protobuf.UInt64Value index = 1 [json_name = "index"];
    google.protobuf.UInt64Value slot = 2 [json_name = "slot"];
    google.protobuf.UInt64Value proposer_index = 3 [json_name = "proposer_index"];
    google.protobuf.StringValue state_root = 4 [json_name = "state_root"];
    google.protobuf.StringValue parent_root = 5 [json_name = "parent_root"];
}

message DataColumnSidecar {
    google.protobuf.UInt64Value index = 1 [json_name = "index"];
    google.protobuf.UInt64Value slot = 2 [json_name = "slot"];
    google.protobuf.UInt64Value proposer_index = 3 [json_name = "proposer_index"];
    google.protobuf.StringValue state_root = 4 [json_name = "state_root"];
    google.protobuf.StringValue parent_root = 5 [json_name = "parent_root"];
    google.protobuf.UInt32Value kzg_commitments_count = 6 [json_name = "kzg_commitments_count"];
}
