syntax = "proto3";

package xatu.libp2p;

option go_package = "github.com/ethpandaops/xatu/pkg/proto/libp2p";

import "pkg/proto/libp2p/eth.proto";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

enum EventType {
  UNKNOWN = 0;
  CONNECTED = 1;
  DISCONNECTED = 2;
  ADD_PEER = 3;
  REMOVE_PEER = 4;
  RECV_RPC = 5;
  SEND_RPC = 6;
  JOIN = 7;
  HANDLE_STATUS = 8;
  HANDLE_METADATA = 9;
  DROP_RPC = 10;
  LEAVE = 11;
  GRAFT = 12;
  PRUNE = 13;
  PUBLISH_MESSAGE = 14;
  REJECT_MESSAGE = 15;
  DUPLICATE_MESSAGE = 16;
  DELIVER_MESSAGE = 17;
  RPC_META_CONTROL_IHAVE = 18;
  RPC_META_CONTROL_IWANT = 19;
  RPC_META_CONTROL_IDONTWANT = 20;
  RPC_META_CONTROL_GRAFT = 21;
  RPC_META_CONTROL_PRUNE = 22;
}

message AddPeer {
  google.protobuf.StringValue peer_id = 1 [json_name = "peer_id"];
  google.protobuf.StringValue protocol = 2;
}

message RemovePeer {
  google.protobuf.StringValue peer_id = 1 [json_name = "peer_id"];
}

message RecvRPC {
  google.protobuf.StringValue peer_id = 1 [json_name = "peer_id"];
  RPCMeta meta = 2;
}

message SendRPC {
  google.protobuf.StringValue peer_id = 1 [json_name = "peer_id"];
  RPCMeta meta = 2;
}

message DropRPC {
  google.protobuf.StringValue peer_id = 1 [json_name = "peer_id"];
  RPCMeta meta = 2;
}

message Join {
  google.protobuf.StringValue topic = 1;
}

message Leave {
  google.protobuf.StringValue topic = 2;
}

message Graft {
  google.protobuf.StringValue peer_id = 1 [json_name = "peer_id"];
  google.protobuf.StringValue topic = 2;
}

message Prune {
  google.protobuf.StringValue peer_id = 1 [json_name = "peer_id"];
  google.protobuf.StringValue topic = 2;
}

message PublishMessage {
  google.protobuf.StringValue msg_id = 1 [json_name = "msg_id"];
  google.protobuf.StringValue topic = 2;
}

message RejectMessage {
  google.protobuf.StringValue msg_id = 1 [json_name = "msg_id"];
  google.protobuf.StringValue peer_id = 2 [json_name = "peer_id"];
  google.protobuf.StringValue topic = 3;
  google.protobuf.StringValue reason = 4;
  google.protobuf.BoolValue local = 5;
  google.protobuf.UInt32Value msg_size = 6 [json_name = "msg_size"];
  google.protobuf.UInt64Value seq_number = 7 [json_name = "seq_number"];
}

message DuplicateMessage {
  google.protobuf.StringValue msg_id = 1 [json_name = "msg_id"];
  google.protobuf.StringValue peer_id = 2 [json_name = "peer_id"];
  google.protobuf.StringValue topic = 3;
  google.protobuf.BoolValue local = 4;
  google.protobuf.UInt32Value msg_size = 5 [json_name = "msg_size"];
  google.protobuf.UInt64Value seq_number = 6 [json_name = "seq_number"];
}

message DeliverMessage {
  google.protobuf.StringValue msg_id = 1 [json_name = "msg_id"];
  google.protobuf.StringValue peer_id = 2 [json_name = "peer_id"];
  google.protobuf.StringValue topic = 3;
  google.protobuf.BoolValue local = 4;
  google.protobuf.UInt32Value msg_size = 5 [json_name = "msg_size"];
  google.protobuf.UInt64Value seq_number = 6 [json_name = "seq_number"];
}

message TraceEventMetadata {
  google.protobuf.StringValue peer_id = 1 [json_name = "peer_id"];
}

message Connected {
  google.protobuf.StringValue remote_peer = 1 [json_name = "remote_peer"];
  google.protobuf.StringValue remote_maddrs = 2 [json_name = "remote_maddrs"];
  google.protobuf.StringValue agent_version = 3 [json_name = "agent_version"];
  google.protobuf.StringValue direction = 4 [json_name = "direction"];
  google.protobuf.Timestamp opened = 5 [ json_name = "opened" ];
  // See: https://github.com/probe-lab/hermes/commit/614e34ed0db780ee08c3bc333925a62409096166
  google.protobuf.BoolValue transient = 6 [json_name = "transient", deprecated = true];
  google.protobuf.BoolValue limited = 7 [json_name = "limited"];
}

message Disconnected {
  google.protobuf.StringValue remote_peer = 1 [json_name = "remote_peer"];
  google.protobuf.StringValue remote_maddrs = 2 [json_name = "remote_maddrs"];
  google.protobuf.StringValue agent_version = 3 [json_name = "agent_version"];
  google.protobuf.StringValue direction = 4 [json_name = "direction"];
  google.protobuf.Timestamp opened = 5 [ json_name = "opened" ];
  // See: https://github.com/probe-lab/hermes/commit/614e34ed0db780ee08c3bc333925a62409096166
  google.protobuf.BoolValue transient = 6 [json_name = "transient", deprecated = true];
  google.protobuf.BoolValue limited = 7 [json_name = "limited"];
}

message HandleStatus {
  google.protobuf.StringValue peer_id = 1 [json_name = "peer_id"];
  google.protobuf.StringValue protocol_id = 2 [json_name = "protocol_id"];
  google.protobuf.StringValue error = 3;
  google.protobuf.FloatValue latency = 4;
  xatu.libp2p.Status request = 5;
  xatu.libp2p.Status response = 6;
}

message HandleMetadata {
  google.protobuf.StringValue peer_id = 1 [json_name = "peer_id"];
  google.protobuf.StringValue protocol_id = 2 [json_name = "protocol_id"];
  google.protobuf.StringValue error = 3;
  google.protobuf.FloatValue latency = 4;
  xatu.libp2p.Metadata metadata = 5;
}

// RPCMeta represents the RPC meta data for a peer. This is used to represent the highest level of
// the RPC meta data, and is what is used when parsing/preparing the RPC meta data.
message RPCMeta {
  repeated MessageMeta messages = 1;
  repeated SubMeta subscriptions = 2;
  ControlMeta control = 3;
  google.protobuf.StringValue peer_id = 4 [json_name = "peer_id"];
}

message MessageMeta {
  google.protobuf.StringValue message_id = 1 [json_name = "message_id"];
  google.protobuf.StringValue topic = 2;
}

message SubMeta {
  google.protobuf.BoolValue subscribe = 1 [json_name = "subscribe"];
  google.protobuf.StringValue topic_id = 2 [json_name = "topic_id"];
}

message ControlMeta {
  repeated ControlIHaveMeta ihave = 1;
  repeated ControlIWantMeta iwant = 2;
  repeated ControlGraftMeta graft = 3;
  repeated ControlPruneMeta prune = 4;
  repeated ControlIDontWantMeta idontwant = 5;
}

// ControlIHaveMeta represents a single topic and its message IDs. This is used to represent the
// highest level of the control message, and is what is used when parsing/preparing the control
// messages.
message ControlIHaveMeta {
  google.protobuf.StringValue topic_id = 1 [json_name = "topic_id"];
  repeated google.protobuf.StringValue message_ids = 2 [json_name = "message_ids"];
}

// ControlIHaveMetaItem represents a single message ID for a topic. This is used to represent the
// lowest level of the control message, and is what is persisted to the store.
message ControlIHaveMetaItem {
  google.protobuf.StringValue root_event_id = 1 [json_name = "root_event_id"];
  google.protobuf.StringValue peer_id = 2 [json_name = "peer_id"];
  google.protobuf.StringValue message_id = 3 [json_name = "message_id"];
  google.protobuf.StringValue topic = 4;
  google.protobuf.UInt32Value message_index = 5 [json_name = "message_index"];
  google.protobuf.UInt32Value control_index = 6 [json_name = "control_index"];
}

// ControlIWantMeta represents a single message ID. This is used to represent the highest level of
// the control message, and is what is used when parsing/preparing the control messages.
message ControlIWantMeta {
  repeated google.protobuf.StringValue message_ids = 2 [json_name = "message_ids"];
}

// ControlIWantMetaItem represents a single message ID. This is used to represent the lowest level
// of the control message, and is what is persisted to the store.
message ControlIWantMetaItem {
  google.protobuf.StringValue root_event_id = 1 [json_name = "root_event_id"];
  google.protobuf.StringValue peer_id = 2 [json_name = "peer_id"];
  google.protobuf.StringValue message_id = 3 [json_name = "message_id"];
  google.protobuf.UInt32Value message_index = 4 [json_name = "message_index"];
  google.protobuf.UInt32Value control_index = 5 [json_name = "control_index"];
}

// ControlGraftMeta represents a single topic. This is used to represent the highest level of the
// control message, and is what is used when parsing/preparing the control messages.
message ControlGraftMeta {
  google.protobuf.StringValue topic_id = 1 [json_name = "topic_id"];
}

// ControlGraftMetaItem represents a single topic. This is used to represent the lowest level of
// the control message, and is what is persisted to the store.
message ControlGraftMetaItem {
  google.protobuf.StringValue root_event_id = 1 [json_name = "root_event_id"];
  google.protobuf.StringValue peer_id = 2 [json_name = "peer_id"];
  google.protobuf.StringValue topic = 3;
  google.protobuf.UInt32Value control_index = 4 [json_name = "control_index"];
}

// ControlPruneMeta represents a single topic and its peer IDs. This is used to represent the
// highest level of the control message, and is what is used when parsing/preparing the control
// messages.
message ControlPruneMeta {
  google.protobuf.StringValue topic_id = 1 [json_name = "topic_id"];
  repeated google.protobuf.StringValue peer_ids = 2 [json_name = "peer_ids"];
}

// ControlPruneMetaItem represents a single peer ID for a topic. This is used to represent the
// lowest level of the control message, and is what is persisted to the store.
message ControlPruneMetaItem {
  google.protobuf.StringValue root_event_id = 1 [json_name = "root_event_id"];
  google.protobuf.StringValue peer_id = 2 [json_name = "peer_id"];
  google.protobuf.StringValue graft_peer_id = 3 [json_name = "graft_peer_id"];
  google.protobuf.StringValue topic = 4;
  google.protobuf.UInt32Value control_index = 5 [json_name = "control_index"];
  google.protobuf.UInt32Value peer_index = 6 [json_name = "peer_index"];
}

// ControlIDontWantMeta represents a single message ID. This is used to represent the highest level
// of the control message, and is what is used when parsing/preparing the control messages.
message ControlIDontWantMeta {
  repeated google.protobuf.StringValue message_ids = 1 [json_name = "message_ids"];
}

// ControlIDontWantMetaItem represents a single message ID. This is used to represent the lowest
// level of the control message, and is what is persisted to the store.
message ControlIDontWantMetaItem {
  google.protobuf.StringValue root_event_id = 1 [json_name = "root_event_id"];
  google.protobuf.StringValue peer_id = 2 [json_name = "peer_id"];
  google.protobuf.StringValue message_id = 3 [json_name = "message_id"];
  google.protobuf.UInt32Value message_index = 4 [json_name = "message_index"];
  google.protobuf.UInt32Value control_index = 5 [json_name = "control_index"];
}
